# miniBlockChain

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  UTXO_IMPLEMENTATION.md  accepted_ports.json  incorrect_private_key_test.sh  make_new_account.sh  most_recent_block.json  new_account_details.json  run_integration_tests.sh  run_validation.sh  send_transaction.sh  test_transaction.sh
Node_/: blockchain.json
benches/: blockchain_benchmarks.rs
integration_tests/: faucet_test.sh  incorrect_private_key_test.sh  peer_state_adoption_test.sh  simple_transaction_test.sh
src/: account_creation.rs  accounts.rs  adopt_network_state.rs  block.rs  block_consensus.rs  blockchain.rs  chain_consensus.rs  consensus.rs  constants.rs  faucet.rs  fountain.rs  get_consensus.rs  helper.rs  lib.rs  main.rs  merkleTree.rs  merkle_tree.rs  network.rs  requests.rs  send_transaction.rs  server.rs  transactions.rs  validation.rs  zk_proof.rs
src/modules/: adopt_network_state.rs  blockchain.rs  consensus.rs  constants.rs  merkle_tree.rs  mod.rs  network.rs  requests.rs  utxo.rs  validation.rs  zk_proof.rs
test_scripts/: faucet_test.sh  incorrect_private_key_test.sh  peer_state_adoption_test.sh  proof_reuse_rejection_test.sh  simple_transaction_test.sh
tests/: reuse_same_zk_proof.rs  utxo_integration_tests.rs  utxo_system_tests.rs
