[package]
name = "miniBlockChain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = "0.20.2"
rand = "0.8.3"
hex = "0.4.3"
curve25519-dalek = "3.0"
rand_core = "0.6"
